
Mechanic Timers
* New: Mechanic Timers can now link to hidden alternate versions sharing Settings.

Phase Monitor
* Fixed: Possible nil value with Type ID reliant deaths.

RezMaster
* Fixed: Possible nil value with unassigned Unit cache.

Infernal Dawn
* Rusila Dreadblade
** New: Added Enrage timer which begins counting down at the start of Phase 2.
* Ember Conclave
** Change: Dead Bosses will no longer show up in the Phase Monitor once the phase has transitioned.
* Laeyths
** New: Added Enrage timer to Laethys. (10 minutes, unconfirmed)
** Change: Add Timer is now limited to appearing in Phase 1 only.
** Change: Reduced Timer for Liquid Gold (after initial)
* Maelforge Final
** New: Added Enrage timer.
** New: Added Unit Type ID for P2 version of Maelforge.
** New: Added Phase Tracking for all three phases. (Initial)
** New: Added Timer for Earthen and Fiery Fissures.
** Change: Adjusted the personal alert default colors for both versions of Hellfire debuff.

Primeval Feast
* Atrophinius
** New: Added buff remove triggers for Mechanic Spy's Anguish timers.

Hammerknell Fortress
* Akylios
** Change: Both types of Phase 2 triggers are enabled by default.
** Note: You can enable both Triggers as KBM will only ever use one. If the percentage trigger fails, KBM will wait for the Emote.

Translations
* French Updated.
* German Updated.
* Russian Updated.

----
v1.1.9

Mechanic Spy
* Fixed: Issue with new Static type timers attempting to initialize as nil rather than 0.

Infernal Dawn
* Ituziel
** Fixed: Trigger actually added to switch Ituziel's Phase Monitor to final phase.

----
v1.1.8

Commands
* New: /kbmdefault will now reset the position of both the Menu Button and Menu Window to central.
* New: The /kbmdefault command will also enable the Menu Button as visible and unlocked for positioning (Right Mouse Drag).
* Note: The /kbmdefault command will eventually be expanded upon to accept arguments, such as All, Button, Window, Timers, Alerts etc...